--- a/assets/stylesheets/landing.css
+++ b/assets/stylesheets/landing.css
@@ -107,8 +107,8 @@ body{
     font-family: Inter-Extra-Bold;
     font-style: normal;
     font-weight: 800;
-    font-size: 58px;
-    line-height: 84px;
+    font-size: 64px;
+    line-height: 76px;
 
     /* or 153% */
     text-align: left;
@@ -124,7 +124,7 @@ body{
     font-style: normal;
     font-weight: 800;
     font-size: 64px;
-    line-height: 77px;
+    line-height: 76px;
 
     background: -webkit-linear-gradient(268.01deg, #2506C4 0%, #1E85FF 100%);
     background-clip: text;
@@ -134,7 +134,8 @@ body{
 }
 
 .hero-early-access-btn{
-    background: #1E47FF;
+    background: rgba(0,61,214);
+    background-blend-mode: normal;
     border-radius: 10px;
     padding : 20px 55px;
     border : 0px solid;
@@ -151,6 +152,21 @@ body{
     color: #FFFFFF;
 }
 
+.col-lg-4.col-md-4.col-12.why-cols:nth-child(1) > img:nth-child(1) {
+ width: 70px;
+ height: 70px;
+}
+
+.col-lg-4.col-md-4.col-12.why-cols:nth-child(2) > img:nth-child(1) {
+ width: 70px;
+ height: 70px;
+}
+
+.col-lg-4.col-md-4.col-12.why-cols:nth-child(3) > img:nth-child(1) {
+ width: 70px;
+ height: 70px;
+}
+
 .startup-life-svg-div{
     margin-top: -100px;
 }
@@ -160,44 +176,54 @@ body{
 }
 
 .why-cols{
-    margin-top: 3rem;
-    padding : 1rem
+    margin-top: calc(3rem - 33px);
+    padding : 1rem;
+    position: relative;
 }
 
 .why-cols .why-headings{
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 30px;
+    font-size: 26px;
     line-height: 36px;
-    margin-top: 2rem;
+    margin-top: calc(2rem - 15px);
+    position: relative;
 
     color: #30323E;
 }
 
 .why-cols .why-info{
-    margin-top: 24px;
+    margin-top: -6px;
 
-    font-family: Inter-Light;
+    font-family: Inter;
     font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 400;
+    font-size: 18px;
     line-height: 32px;
+    position: relative;
 
     /* or 160% */
 
     color: #646464;
 }
 
+.db .row{
+    position: relative;
+    top: 8px;
+}
+
 .timer-heads{
-    font-family: Inter-Light;
+    font-family: Inter;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
     line-height: 34px;
     width: 66%;
+    position: relative;
+
     /* identical to box height, or 142% */
-    color: #646464;
+     color: rgb(76, 76, 76);
 }
 
 .timer-time{
@@ -221,7 +247,7 @@ body{
 
 .timer-left-div{
     text-align: center;
-    margin-top: 30px;
+    margin-top: 26px;
 
     font-family: Inter;
     font-style: normal;
@@ -258,10 +284,12 @@ body{
 
 .timer-blocks{
     text-align: center;
+    position: relative;
+    top: 0px;
 }
 
 .timer-div{
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .why-sateeq-text{
@@ -344,7 +372,7 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
     padding: 50px 70px 10px 70px;
-    margin-top: 100px;
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -405,6 +433,7 @@ body{
     font-feature-settings: 'salt' on, 'liga' off;
 
     margin: 20px 0;
+    border: 0px none rgb(0, 0, 0);
 }
 
 .footer{
@@ -459,6 +488,7 @@ body{
     width : 150px;
 }
 
+
 @media only screen and (max-width: 600px) {
 
     .wrapper{
@@ -471,10 +501,15 @@ body{
     }
 
     .hero-heading{
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 36px;
+        line-height: 50px;
         margin-bottom: 1rem;
         text-align: center;
+    }
+
+    .hero-heading .highlight{
+        font-size: 36px;
+        line-height: 50px;
     }
 
     .login-btn{
@@ -487,7 +522,7 @@ body{
     }
 
     .hero-text{
-        font-size: 16px;
+        font-size: 14px;
         text-align: center;
     }
 
@@ -519,8 +554,8 @@ body{
     }
 
     .join-text{
-        font-size: 16px;
-        line-height: 30px;
+        font-size: 20px;
+        line-height: 32px;
         text-align: center;
     }  
 
@@ -529,7 +564,7 @@ body{
     }
     
     .join-club-div .right .vectors .vector{
-        width: 80px;
+        width: 60px;
     }
 
     .join-club-div .right{
@@ -537,7 +572,7 @@ body{
     }
 
     .join-club-div .left .join-btn{
-        padding:12px 16px;
+        padding:12px 24px;
         font-size: 16px;
         border: 0px solid;
         margin-bottom: 30px;
@@ -547,14 +582,9 @@ body{
         margin-top: 0;
     }
 
-    .hero-heading .highlight{
-        font-size: inherit;
-        line-height:inherit;
-    }
-
     .hero-early-access-btn{
-        padding : 10px 30px;
-        font-size: 1rem;
+        padding : 10px 50px;
+        font-size: 1.2rem;
         line-height:inherit;
     }
 
@@ -563,8 +593,8 @@ body{
     }
 
     .timer-time , .time-colons{
-        padding : 2px 12px;
-        font-size: 24px;
+        padding : 2px 10px;
+        font-size: 18px;
         line-height: inherit;
         margin-right: 0;
         margin-top: 16px;
@@ -584,6 +614,19 @@ body{
     }
     .wrapper .row .col-md-12{
         text-align: center;
+    }
+    .get-early-access-header-btn{
+        display : none
+    }
+
+    .why-sateeq-text{
+        font-size: 30px;
+    }
+    .why-cols .why-headings{
+        font-size: 24px;
+    }
+    .why-cols .why-info{
+        font-size: 16px;
     }
 }
 
