--- a/assets/stylesheets/landing.css
+++ b/assets/stylesheets/landing.css
@@ -628,6 +628,19 @@ body{
     .why-cols .why-info{
         font-size: 16px;
     }
+    .footer-logo img{
+        width: 120px;
+    }
+    .footer-revolution{
+        font-size: 12px;
+        margin-top: 8px;
+    }
+    .footer-social-info{
+        font-size: 12px;
+    }
+    .social-links-div img{
+        width: 20px;
+    }
 }
 
 @media only screen 
